Mnist dataset for handriten images

--- a/MnistDatasetmodel.ipynb
+++ b/MnistDatasetmodel.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM1hGDh+WLowsyISskRmPGZ",
+      "authorship_tag": "ABX9TyM9OZnGf01R0GeX31SRQ7rZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,7 +33,7 @@
         "id": "6p2higwRhP5o",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 927
+          "height": 1000
         },
         "outputId": "79f7be51-3847-452b-fb58-5482cffe788e"
       },
@@ -204,7 +204,21 @@
             "Epoch 2/50\n",
             "\u001b[1m422/422\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m258s\u001b[0m 560ms/step - accuracy: 0.9794 - loss: 0.0637 - val_accuracy: 0.9908 - val_loss: 0.0362 - learning_rate: 0.0010\n",
             "Epoch 3/50\n",
-            "\u001b[1m110/422\u001b[0m \u001b[32m━━━━━\u001b[0m\u001b[37m━━━━━━━━━━━━━━━\u001b[0m \u001b[1m2:46\u001b[0m 533ms/step - accuracy: 0.9839 - loss: 0.0488"
+            "\u001b[1m422/422\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m258s\u001b[0m 552ms/step - accuracy: 0.9848 - loss: 0.0477 - val_accuracy: 0.9918 - val_loss: 0.0281 - learning_rate: 0.0010\n",
+            "Epoch 4/50\n",
+            "\u001b[1m422/422\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m266s\u001b[0m 562ms/step - accuracy: 0.9872 - loss: 0.0406 - val_accuracy: 0.9917 - val_loss: 0.0294 - learning_rate: 0.0010\n",
+            "Epoch 5/50\n",
+            "\u001b[1m422/422\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m262s\u001b[0m 563ms/step - accuracy: 0.9892 - loss: 0.0333 - val_accuracy: 0.9928 - val_loss: 0.0252 - learning_rate: 0.0010\n",
+            "Epoch 6/50\n",
+            "\u001b[1m422/422\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m233s\u001b[0m 552ms/step - accuracy: 0.9903 - loss: 0.0326 - val_accuracy: 0.9922 - val_loss: 0.0303 - learning_rate: 0.0010\n",
+            "Epoch 7/50\n",
+            "\u001b[1m422/422\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m262s\u001b[0m 552ms/step - accuracy: 0.9920 - loss: 0.0257 - val_accuracy: 0.9918 - val_loss: 0.0308 - learning_rate: 0.0010\n",
+            "Epoch 8/50\n",
+            "\u001b[1m422/422\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m236s\u001b[0m 559ms/step - accuracy: 0.9928 - loss: 0.0236 - val_accuracy: 0.9945 - val_loss: 0.0224 - learning_rate: 0.0010\n",
+            "Epoch 9/50\n",
+            "\u001b[1m422/422\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m232s\u001b[0m 550ms/step - accuracy: 0.9926 - loss: 0.0219 - val_accuracy: 0.9922 - val_loss: 0.0269 - learning_rate: 0.0010\n",
+            "Epoch 10/50\n",
+            "\u001b[1m310/422\u001b[0m \u001b[32m━━━━━━━━━━━━━━\u001b[0m\u001b[37m━━━━━━\u001b[0m \u001b[1m1:00\u001b[0m 539ms/step - accuracy: 0.9930 - loss: 0.0219"
           ]
         }
       ],
@@ -364,6 +378,34 @@
         "\n",
         "\n"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Ethical Considerations and Bias Mitigation\n",
+        "Potential Biases in the MNIST Model:\n",
+        "\n",
+        "    Data Collection Bias:\n",
+        "\n",
+        "        MNIST primarily contains digits written by English-speaking contributors\n",
+        "\n",
+        "        May not represent global variations in handwriting styles\n",
+        "\n",
+        "        Potential underrepresentation of certain digit styles (e.g., European \"1\" vs. American \"1\")\n",
+        "\n",
+        "    Model Architecture Bias:\n",
+        "\n",
+        "        CNN may prioritize certain spatial patterns common in Western handwriting\n",
+        "\n",
+        "        May struggle with digits written in unconventional styles\n",
+        "\n",
+        "    Evaluation Bias:\n",
+        "\n",
+        "        Accuracy metric alone doesn't capture fairness across different subgroups"
+      ],
+      "metadata": {
+        "id": "TCNjX79NBmCX"
+      }
     }
   ]
 }
