Amazon sentiment analysis

--- a/AmazonSentimentAnalysis.ipynb
+++ b/AmazonSentimentAnalysis.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOetFuYlQtDAGLzozcT9WT8",
+      "authorship_tag": "ABX9TyNWVOOxvDICg+lpXgc/iFQv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -231,6 +231,33 @@
       ],
       "metadata": {
         "id": "k_qxv_As_Zt3"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Potential Biases in the Amazon Reviews Model:\n",
+        "\n",
+        "    Language Bias:\n",
+        "\n",
+        "        Only processes English reviews\n",
+        "\n",
+        "        May miss cultural nuances in sentiment expression\n",
+        "\n",
+        "    Product/Brand Bias:\n",
+        "\n",
+        "        Entity recognition favors well-known brands\n",
+        "\n",
+        "        May miss niche or regional products\n",
+        "\n",
+        "    Sentiment Analysis Bias:\n",
+        "\n",
+        "        Rule-based system favors obvious sentiment markers\n",
+        "\n",
+        "        May misinterpret sarcasm or cultural expressions"
+      ],
+      "metadata": {
+        "id": "k4XwF_6nB5wZ"
       }
     }
   ]
